ADD ajax image module and CREATE dynamic gallery

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  aslkjdansl kdnalksdnalksn
+  <div id="header"></div>
+  <div id="gallery"></div>
 </body>
 </html>
